# goolib

./: .gitignore  CMakeLists.txt  README.md
3rd/cJSON-1.7.19/: CMakeLists.txt
3rd/curl-8.16.0/: CMakeLists.txt
3rd/gfc-0.1.2/: CMakeLists.txt
3rd/minizip-ng-4.0.10/: CMakeLists.txt  mz_zip_rw.c
3rd/opencv-4.12.0/modules/videoio/src/: cap_ffmpeg_impl.hpp
3rd/poppler-25.10.0/: CMakeLists.txt  ChangeLog
3rd/poppler-25.10.0/glib/reference/html/: PopplerAction.html  PopplerAttachment.html  PopplerDocument.html  PopplerFormField.html  PopplerStructureElement.html  annotation-glossary.html  api-index-0-12.html  api-index-0-14.html  api-index-0-16.html  api-index-0-18.html  api-index-0-20.html  api-index-0-22.html  api-index-0-26.html  api-index-0-33.html  api-index-0-46.html  api-index-0-54.html  api-index-0-70.html  api-index-0-72.html  api-index-0-73.html  api-index-0-78.html  api-index-0-80.html  api-index-0-82.html  api-index-0-88.html  api-index-0-89.html  api-index-0-90.html  api-index-20-04-0.html  api-index-20-09-0.html  api-index-21-05-0.html  api-index-21-12-0.html  api-index-full.html  ch01.html  index.html  poppler-Error-handling.html  poppler-PDF-Utility-functions.html  poppler-Poppler-Annotation.html  poppler-Poppler-Color.html  poppler-Poppler-Features.html  poppler-Poppler-Layer.html  poppler-Poppler-Media.html  poppler-Poppler-Movie.html  (+2 more)
3rd/poppler-25.10.0/utils/po/: pdfsig.pot
3rd/xpdf-4.05/: CMakeLists.txt
3rd/xpdf-4.05/xpdf/: CMakeLists.txt  pdftopng.cc
script/: goo-mail-latest.sh  goo-mail-send.sh  goo-pdf-crop.sh  goo-pdf-upgrade.sh  goo-png-crop.sh  goo-proc-copy.sh  goo-proc-execute.sh  goo-sftp-upload.sh  goo-ssh-execute.sh
src/: goolib-error.c  goolib-error.h  goolib-http.c  goolib-http.h  goolib-jvm.c  goolib-jvm.h  goolib-mail.c  goolib-mail.h  goolib-ocr.c  goolib-ocr.h  goolib-pdf.c  goolib-pdf.h  goolib-png.c  goolib-png.h  goolib-proc.c  goolib-proc.h  goolib-sftp.c  goolib-sftp.h  goolib-ssh.c  goolib-ssh.h  goolib-util.c  goolib-util.h  goolib-zip.c  goolib-zip.h  goolib.h
src/internal/: smtp.c  smtp.h
tool/: goo-http-google.c  goo-jvm-java.c  goo-llm-gemini.c  goo-llm-ollama.c  goo-mail-latest.c  goo-mail-send.c  goo-pdf-crop.c  goo-pdf-text.c  goo-png-color.c  goo-png-crop.c  goo-png-grayscale.c  goo-proc-copy.c  goo-proc-execute.c  goo-proc-javac.c  goo-sftp-upload.c  goo-ssh-execute.c  goo-zip-dir.c
